@@ -26,6 +26,10 @@ NTSTATUS PhMwpDelayedLoadFunction(
     __in PVOID Parameter
     );
 
+PPH_STRING PhMwpFindDbghelpPath(
+    VOID
+    );
+
 // Event handlers
 
 VOID PhMwpOnDestroy(
